--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{> header }}
+        <p>Node server that uses Mapbox and Darksky.</p>
         <img class="portrait" src="/img/self.jpg" width="500"/>
     </div>
     {{> footer }}
